--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     젠더에는 다양한 관점이 존재하고 그만큼 많은 문제점을 야기한다. 하지만 개인을 있는 그대로 존중하는 것만으로도 해결될 문제가 많다. 존중 없이 차별과 혐오, 배척과 터부시로 이어진다면 갈등의 골은 점점 심화될 수밖에 없다. 젠더를 대할 때 우리는 성별을 떠나 사람 자체에 대한 존중을 중요시하는 태도가 중요하다.
   </div>
   <box style = "position: fixed; bottom : 20px; right : 20px;">
-  <a href = "#"><img src="./img/Group3.png" title="위로 가기"></a>
+  <a href = "#"><img src="./img/Group3.png"></a>
   </box>
   <footer>copyright 2023. HKNU DESIGN JISOO KIM ALL RIGHT RESERVED.</footer>
   
